--- a/css/_base.sass
+++ b/css/_base.sass
@@ -29,4 +29,8 @@ nav
         color: white
     button:hover
         transform: scale(105%)
-        background-color: #ff3434
+        background-color: #ff3434    
+
+.dark-mode
+    background-color: #1d1d1d
+    color: white
