--- a/css/groups.css
+++ b/css/groups.css
@@ -33,6 +33,11 @@ nav button:hover {
   background-color: #ff3434;
 }
 
+.dark-mode {
+  background-color: #1d1d1d;
+  color: white;
+}
+
 main {
   height: 145vh;
   padding: 70px;
@@ -52,6 +57,7 @@ div.ise {
 }
 div.ise img {
   width: 100%;
+  height: 25vh;
 }
 
 section.ise-group {
