--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,11 @@ nav button:hover {
   background-color: #ff3434;
 }
 
+.dark-mode {
+  background-color: #1d1d1d;
+  color: white;
+}
+
 main {
   height: 80vh;
   text-align: justify;
