--- a/css/groups.sass
+++ b/css/groups.sass
@@ -32,6 +32,7 @@ div.ise
     box-shadow: 0px 3px 3px #b7b7b792
     img
         width: 100%
+        height: 25vh
         
 
 section.ise-group 
@@ -39,6 +40,7 @@ section.ise-group
     justify-content: space-around
     div.txt 
         @include txt
+    
 
 section.arduino-group
     @include display
