--- a/css/pessoas_isi.css
+++ b/css/pessoas_isi.css
@@ -62,10 +62,18 @@ div.square {
   align-items: center;
   justify-content: space-evenly;
   color: white;
+  transition: 0.5s;
 }
 div.square img {
-  width: 50%;
+  width: 125px;
+  height: 125px;
   filter: drop-shadow(5px 5px 5px #3a3a3a);
+  border-radius: 100px;
+  background-color: #f7f7f7;
+}
+
+div.square:hover {
+  transform: scale(110%);
 }
 
 .popup {
@@ -83,9 +91,10 @@ div.square img {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: #ff3f3f;
-  padding: 20px;
+  background-color: #fff;
+  padding: 100px;
   border-radius: 5px;
+  color: black !important;
 }
 
 .close {
